# Axis-Allies

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  phases.md
.cargo/: config.toml
.claude/: settings.local.json
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx
client/src/components/: GameScreen.tsx  MainMenu.tsx
client/src/stores/: gameStore.ts  uiStore.ts
client/src/types/: game.ts  ui.ts
client/src/wasm/: engine.ts  loader.ts
crates/aa-engine/: Cargo.toml
crates/aa-engine/bindings/: Action.ts  ActionResult.ts  ActiveCombat.ts  BombingTarget.ts  CollectIncomeState.ts  CombatMoveState.ts  CombatState.ts  CombatSubPhase.ts  EngineError.ts  Facility.ts  FacilityType.ts  GameEvent.ts  GameState.ts  LegalAction.ts  MobilizeState.ts  NonCombatMoveState.ts  Phase.ts  PhaseState.ts  PlannedMove.ts  PoliticalState.ts  PoliticalTriggers.ts  Power.ts  PowerState.ts  PurchaseState.ts  RegionId.ts  SeaZoneState.ts  SpecialAbility.ts  Team.ts  TerritoryState.ts  TerritoryType.ts  UnitDomain.ts  UnitInstance.ts  UnitType.ts
crates/aa-engine/src/: action.rs  ai.rs  apply.rs  bombing.rs  combat.rs  dice.rs  error.rs  income.rs  lib.rs  mobilize.rs  movement.rs  multiplayer.rs  phase.rs  politics.rs  power.rs  purchase.rs  save.rs  setup.rs  special.rs  state.rs  territory.rs  unit.rs  validate.rs  victory.rs
crates/aa-engine/src/data/: mod.rs  sea_zone_ids.rs  sea_zones.rs  strait_ids.rs  territories.rs  territory_ids.rs
crates/aa-server/: Cargo.toml
crates/aa-server/src/: main.rs  protocol.rs
crates/aa-wasm/: Cargo.toml
crates/aa-wasm/src/: conversions.rs  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
web/: README.md  app.js  build.sh  index.html  map-data.js  serve.py  style.css
web/pkg/: aa_wasm.d.ts  aa_wasm.js  aa_wasm_bg.wasm  aa_wasm_bg.wasm.d.ts  package.json
