[workspace]
members = [
    "crates/aa-engine",
    "crates/aa-wasm",
    "crates/aa-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_chacha = "0.3"
thiserror = "2"
