[package]
name = "axis-allies-desktop"
version = "0.1.0"
edition = "2021"
description = "Axis & Allies Global 1940 - Desktop Edition"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
aa-engine = { path = "../crates/aa-engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
