[package]
name = "aa-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multiplayer WebSocket server for Axis & Allies"

[[bin]]
name = "aa-server"
path = "src/main.rs"

[dependencies]
aa-engine = { path = "../aa-engine" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
