[package]
name = "aa-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM bridge for Axis & Allies game engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aa-engine = { path = "../aa-engine" }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
